@@ -1,6 +1,7 @@
 2007-04-13: [Jacques]
 * add glPolygonOffset
 * fix Glut.createMenu
+* fix GlTex.gen_textures
 
 2006-07-29: [Jacques]
 * make LablGlut's callback window dependent
